# stave

./: CHANGELOG.md  stave.cabal
src/: Main.hs  MyLib.hs
src/Music/: Chord.hs  Interval.hs  Midi.hs  Natural.hs  Note.hs  Pitch.hs
