cabal-version:      2.4
name:               stave
version:            0.1.0.0
maintainer:         matthunz2@gmail.com
author:             Matt Hunzinger
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Music.Chord
        Music.Midi
        Music.Note
        Music.Pitch
        Music.Natural
        Music.Interval

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.4.0,
        wide-word ^>=0.1.5.0

executable stave
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.4.0,
        wide-word ^>=0.1.5.0,
        optparse-applicative ^>= 0.18.1.0
